trunk/Archive2/cd/55f1b7e9cd9149/output
main.cpp: In function 'int main()':
main.cpp:12:32: error: invalid initialization of non-const reference of type 'int&' from an rvalue of type 'int'
      MyOtherFunction(MyFunction());   
                                ^
main.cpp:7:6: note:   initializing argument 1 of 'void MyOtherFunction(int&)'
 void MyOtherFunction( int& val)
      ^
